--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <title>Talya Holding - Food Supplies, Supermarkets & more.</title>
 </head>
 <body class="leading-8 tracking-widest md:text-lg md:leading-10">
-    <header class="bg-[url('../assets/hero-image.jpg')] bg-cover h-[55vh] py-6 mb-7 md:mb-16 md:h-[40vh] lg:h-[70vh]">
+    <header class="bg-[url('../assets/hero-image.JPG')] bg-cover h-[55vh] py-6 mb-7 md:mb-16 md:h-[40vh] lg:h-[70vh]">
         <div class="width max-width md:w-5/6 md:flex md:justify-between md:items-center">
             <div class="flex justify-between items-center">
                 <!-- <h1 class="text-lg font-extrabold md:text-2xl">Talya Holding</h1> -->
